# stratosphere-patient-app

./: .env.example  .eslintrc.js  .gitignore  README.md  docker-compose.yml  package-lock.json  package.json
.github/workflows/: ci.yml
apps/mobile/: App.tsx  app.json  metro.config.js  package.json  tsconfig.json
apps/mobile/src/navigation/: RootNavigator.tsx
apps/mobile/src/screens/appointments/: AppointmentsScreen.tsx
apps/web/: Dockerfile  next.config.js  package-lock.json  package.json  tailwind.config.js
apps/web/src/app/: layout.tsx  page.tsx  providers.tsx
apps/web/src/app/(auth)/: layout.tsx
apps/web/src/contexts/: AuthContext.tsx  LanguageContext.tsx  ThemeContext.tsx
apps/web/src/lib/: api.ts  utils.ts
apps/web/src/styles/: globals.css
backend/: Dockerfile  patient_portal.db  pyproject.toml  requirements-dev.txt  requirements.txt
backend/app/: __init__.py  config.py  database.py  main.py
backend/app/api/: deps.py
backend/app/api/v1/: appointments.py  auth.py  gdpr.py  health.py  medications.py  messages.py  records.py  users.py
backend/app/core/: __init__.py  encryption.py  exceptions.py  security.py
backend/app/models/: __init__.py  appointment.py  audit.py  audit_log.py  consent.py  device.py  document.py  health.py  health_record.py  medication.py  message.py  notification.py  session.py  user.py
backend/app/schemas/: __init__.py  appointment.py  auth.py  common.py  gdpr.py  health.py  medication.py  message.py  user.py
backend/migrations/: env.py
docs/: API.md  DEVELOPMENT.md
infrastructure/docker/: docker-compose.yml
(+24 files in other folders)
